--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,9 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+.container {
+  max-width: 1230px;
+  margin: auto;
+}
 /*# sourceMappingURL=style.css.map */
