--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,229 @@
           box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 1230px;
   margin: auto;
+}
+
+@font-face {
+  font-family: 'Lato Regular';
+  src: url("../fonts/Lato-Regular.eot");
+  src: url("../fonts/Lato-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-Regular.woff") format("woff"), url("../fonts/Lato-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Italic';
+  src: url("../fonts/Lato-Italic.eot");
+  src: url("../fonts/Lato-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-Italic.woff") format("woff"), url("../fonts/Lato-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Bold';
+  src: url("../fonts/Lato-Bold.eot");
+  src: url("../fonts/Lato-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-Bold.woff") format("woff"), url("../fonts/Lato-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Bold Italic';
+  src: url("../fonts/Lato-BoldItalic.eot");
+  src: url("../fonts/Lato-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-BoldItalic.woff") format("woff"), url("../fonts/Lato-BoldItalic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Lato Italic', sans-serif;
+  background: #000;
+}
+
+.navbar-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 300px;
+}
+
+.navbar__menu {
+  display: block;
+}
+
+.navbar__links {
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  border: 1px solid #d70231;
+  border-radius: 50%;
+  padding: 15px;
+  -webkit-box-shadow: 0 0 5px 1px rgba(215, 2, 49, 0.5);
+          box-shadow: 0 0 5px 1px rgba(215, 2, 49, 0.5);
+  font-family: 'Lato Italic', sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #fff;
+  opacity: 0;
+  z-index: 1;
+}
+
+.navbar__links img {
+  width: auto;
+  height: auto;
+  padding-bottom: 15px;
+}
+
+.navbar__links--0 {
+  -webkit-transition: .35s ease;
+  transition: .35s ease;
+  left: calc(50% - 45px);
+  top: 110px;
+}
+
+.navbar__links--1 {
+  -webkit-transition: .35s ease;
+  transition: .35s ease;
+  left: calc(50% - 45px);
+  top: 110px;
+}
+
+.navbar__links--2 {
+  -webkit-transition: .35s ease;
+  transition: .35s ease;
+  right: calc(50% - 45px);
+  top: 110px;
+}
+
+.navbar__links--3 {
+  -webkit-transition: .35s ease;
+  transition: .35s ease;
+  right: calc(50% - 45px);
+  top: 110px;
+}
+
+.navbar .item-0 {
+  top: 20px;
+  left: calc(50% - 150px);
+  opacity: 1;
+}
+
+.navbar .item-1 {
+  top: 180px;
+  left: calc(50% - 150px);
+  opacity: 1;
+}
+
+.navbar .item-2 {
+  top: 20px;
+  right: calc(50% - 150px);
+  opacity: 1;
+}
+
+.navbar .item-3 {
+  top: 180px;
+  right: calc(50% - 150px);
+  opacity: 1;
+}
+
+.menu-button {
+  cursor: pointer;
+  z-index: 100;
+}
+
+.menu-button__line {
+  width: 42px;
+}
+
+.menu-button__line {
+  position: relative;
+  -webkit-transform: translateY(6px);
+          transform: translateY(6px);
+  border: 1px solid #d70231;
+  border-radius: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  -webkit-transition: all 0ms 300ms;
+  transition: all 0ms 300ms;
+}
+
+.menu-button .animate {
+  border: none;
+}
+
+.menu-button__line:before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  left: -1px;
+  bottom: 6px;
+  border: 1px solid #d70231;
+  border-radius: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  -webkit-transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-button__line:after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  left: -1px;
+  top: 6px;
+  border: 1px solid #d70231;
+  border-radius: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  -webkit-transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-button .animate::after {
+  top: -3px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.menu-button .animate::before {
+  bottom: 1px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  -webkit-transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 /*# sourceMappingURL=style.css.map */
