--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -1,6 +1,6 @@
 $bar-width: 42px
 $bar-height: 2px
-$bar-spacing: 6px
+$bar-spacing: 8px
 
 .navbar
     &-wrap
@@ -71,6 +71,7 @@ $bar-spacing: 6px
 
 .menu 
     &-button
+        height: 20px
         cursor: pointer
         z-index: 100
         &__line
