--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -4,3 +4,8 @@ body
 header
     background: url(../img/bg.png)
     height: 1000px
+h3
+    +bold-italic
+    font-size: 24px
+    color: #d70231
+    text-transform: uppercase
