--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -10,7 +10,7 @@
 
 .hero
     &__info
-        padding-top: 150px
+        padding-top: 161px
         padding-bottom: 370px
         text-align: center
     &__name
@@ -28,10 +28,11 @@
     font-size: 10px
     color: #d70231
     text-transform: uppercase
-    cursor: pointer
+    padding-bottom: 40px
     &__arrow
         margin: 0 auto
         padding-bottom: 20px
+        cursor: pointer
     &__arrow:hover > span
         animation: arrow 1.2s infinite
         animation-timing-function: ease-in-out
