--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -28,6 +28,7 @@ $bar-spacing: 8px
         color: #fff
         opacity: 0
         z-index: 0
+        pointer-events: none
         img
             width: auto
             height: auto
@@ -53,21 +54,25 @@ $bar-spacing: 8px
         left: calc(50% - 150px)
         opacity: 1
         z-index: 1
+        pointer-events: auto
     .item-1
         top: 180px
         left: calc(50% - 150px)
         opacity: 1
         z-index: 1
+        pointer-events: auto
     .item-2
         top: 20px
         right: calc(50% - 150px)
         opacity: 1
         z-index: 1
+        pointer-events: auto
     .item-3
         top: 180px
         right: calc(50% - 150px)
         opacity: 1
         z-index: 1
+        pointer-events: auto
 
 .menu 
     &-button
