--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
 
 header {
   background: url(../img/bg.png);
-  height: 1000px;
+  max-height: auto;
 }
 
 h3 {
@@ -107,6 +107,7 @@ h3 {
   color: #fff;
   opacity: 0;
   z-index: 0;
+  pointer-events: none;
 }
 
 .navbar__links img {
@@ -148,6 +149,7 @@ h3 {
   left: calc(50% - 150px);
   opacity: 1;
   z-index: 1;
+  pointer-events: auto;
 }
 
 .navbar .item-1 {
@@ -155,6 +157,7 @@ h3 {
   left: calc(50% - 150px);
   opacity: 1;
   z-index: 1;
+  pointer-events: auto;
 }
 
 .navbar .item-2 {
@@ -162,6 +165,7 @@ h3 {
   right: calc(50% - 150px);
   opacity: 1;
   z-index: 1;
+  pointer-events: auto;
 }
 
 .navbar .item-3 {
@@ -169,6 +173,7 @@ h3 {
   right: calc(50% - 150px);
   opacity: 1;
   z-index: 1;
+  pointer-events: auto;
 }
 
 .menu-button {
@@ -282,7 +287,7 @@ h3 {
 }
 
 .hero__info {
-  padding-top: 150px;
+  padding-top: 161px;
   padding-bottom: 370px;
   text-align: center;
 }
@@ -307,12 +312,13 @@ h3 {
   font-size: 10px;
   color: #d70231;
   text-transform: uppercase;
-  cursor: pointer;
+  padding-bottom: 40px;
 }
 
 .scroll-down__arrow {
   margin: 0 auto;
   padding-bottom: 20px;
+  cursor: pointer;
 }
 
 .scroll-down__arrow:hover > span {
