--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,7 +3,7 @@ body
 
 header
     background: url(../img/bg.png)
-    height: 1000px
+    max-height: auto
 h3
     +bold-italic
     font-size: 24px
