--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,4 +20,10 @@
 @import 'blocks/work'
 
 // Reviews
-@import 'blocks/reviews'  
+@import 'blocks/reviews'
+
+// Contact
+@import 'blocks/contact' 
+
+// Footer
+@import 'blocks/footer'   
