--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,6 +10,9 @@
             margin-bottom: 100px
             a
                 margin-right: 60px
+                img:hover
+                    transition: 1s all
+                    transform: scale(1.2)
             a:last-child
                 margin-right: 0
         &-info
@@ -24,3 +27,17 @@
                 padding-bottom: 20px
             span:last-child
                 padding-bottom: 0
+.scroll-to-top
+    position: absolute
+    display: block
+    width: 33px
+    height: 33px
+    margin-top: -85px
+    right: 50px
+    padding: 7px 10px 7px 10px
+    background: url(../img/icons/footer-border.png)
+    background-repeat: no-repeat
+    cursor: pointer
+    i
+        font-size: 17px
+        color: #d70231        
